--- a/css/main.css
+++ b/css/main.css
@@ -79,9 +79,9 @@ th,td{
 
 /* Website Banner */
 .header-container {display: flex;justify-content: space-between; align-items: center; width: 100%; padding: 10px 20px; box-sizing: border-box;min-height: 100px;}
-.banner {position: relative; font-family:'Roboto Slab',serif;width: 100%;height: 300px;}
+.banner {position: relative; font-family:'Roboto Slab',serif;width: 100%;height: 100px;}
 .top-left {font-size:2.5em; color: #505050; background: #fafafa; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;left: 0;}
-.bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
+.bottom-right {font-size:2.33em; color: #813c54; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
 .cite{font-size:0.7em;line-height: 0.7em;vertical-align: bottom;color:#fafafa;width: auto;height: 20px;position: absolute; bottom: 0px; left: 5px;}
 /* Conference Title Logo */
 .title1{color: #b2132e; text-shadow: 1px 1px 3px #c0c0c0;} 
